@@ -1,0 +1,35 @@
+________________________________________________________________________________
+GenEvent: #1 ID=20 SignalProcessGenVertex Barcode: -3
+ Momenutm units:     GEV     Position units:      MM
+ Entries this event: 4 vertices, 8 particles.
+ Beam Particles are not defined.
+ RndmState(0)=
+ Wgts(0)=
+ EventScale -1 [energy] 	 alphaQCD=-1	 alphaQED=-1
+                                    GenParticle Legend
+        Barcode   PDG ID      ( Px,       Py,       Pz,     E ) Stat  DecayVtx
+________________________________________________________________________________
+GenVertex:       -1 ID:    0 (X,cT):0
+ I: 1     10001     2212 +0.00e+00,+0.00e+00,+7.00e+03,+7.00e+03   3        -1
+ O: 1     10003        1 +7.50e-01,-1.57e+00,+3.22e+01,+3.22e+01   3        -3
+GenVertex:       -2 ID:    0 (X,cT):0
+ I: 1     10002     2212 +0.00e+00,+0.00e+00,-7.00e+03,+7.00e+03   3        -2
+ O: 1     10004       -2 -3.05e+00,-1.90e+01,-5.46e+01,+5.79e+01   3        -3
+GenVertex:       -3 ID:    0 (X,cT):0
+ I: 2     10003        1 +7.50e-01,-1.57e+00,+3.22e+01,+3.22e+01   3        -3
+          10004       -2 -3.05e+00,-1.90e+01,-5.46e+01,+5.79e+01   3        -3
+ O: 2     10005       22 -3.81e+00,+1.13e-01,-1.83e+00,+4.23e+00   1
+          10006      -24 +1.52e+00,-2.07e+01,-2.06e+01,+8.59e+01   3        -4
+Vertex:       -4 ID:    0 (X,cT)=+1.20e-01,-3.00e-01,+5.00e-02,+4.00e-03
+ I: 1     10006      -24 +1.52e+00,-2.07e+01,-2.06e+01,+8.59e+01   3        -4
+ O: 2     10007        1 -2.44e+00,+2.88e+01,+6.08e+00,+2.96e+01   1
+          10008       -2 +3.96e+00,-4.95e+01,-2.67e+01,+5.64e+01   1
+________________________________________________________________________________
+GenParticle: 10001 ID:2212 (P,E)=0,0,7000,7000 Stat:3 PV:0 EV:-1 Pol:(0.225576,0.456637) F:1 1 231
+GenParticle: 10002 ID:2212 (P,E)=0,0,-7000,7000 Stat:3 PV:0 EV:-2 Pol:(2.32423,1.39164) F:1 1 243
+GenParticle: 10003 ID:1 (P,E)=0.75,-1.569,32.191,32.238 Stat:3 PV:-1 EV:-3 Pol:(0.404169,3.66435) F:1 1 231
+GenParticle: 10004 ID:-2 (P,E)=-3.047,-19,-54.629,57.92 Stat:3 PV:-2 EV:-3 Pol:(1.37927,4.03077) F:1 1 243
+GenParticle: 10005 ID:22 (P,E)=-3.813,0.113,-1.833,4.233 Stat:1 PV:-3 EV:0 Pol:(2.14246,2.0418) F:1 1 231
+GenParticle: 10006 ID:-24 (P,E)=1.517,-20.68,-20.605,85.925 Stat:3 PV:-3 EV:-4 Pol:(2.47154,3.65547) F:1 1 243
+GenParticle: 10007 ID:1 (P,E)=-2.445,28.816,6.082,29.552 Stat:1 PV:-4 EV:0 Pol:(0,0) F:0
+GenParticle: 10008 ID:-2 (P,E)=3.962,-49.498,-26.687,56.373 Stat:1 PV:-4 EV:0 Pol:(0,0) F:0
