@@ -1,3 +1,7 @@
+2010-10-22  Lynn Garren
+
+      * test/testPolarization.cc: verify that Polarization is copied and written
+
 2010-10-20  Lynn Garren
 
       * src/GenParticle.cc: copy flow when using the copy constructor
